# simplesingletable

./: CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  TRANSACTION_USAGE.md  blob_fix_design.md  demonstrate_blob_issue.py  pyproject.toml  requirements.txt  streamlit_app.py  tasks.py
archived/: README.orig.md
docs/: README.md
docs/debugging-scripts/: debug_blob_versions.py  demonstrate_blob_issue.py
example_tables/: standard.yaml
examples/: audit_example.py  blob_storage_example.py  dynamic_gsi_example.py  local_storage_example.py  versioned_repository_example.py
examples/streamlit_demo/: README.md  README_LOCAL.md  app.py  app_local.py  docker-compose.yml  run_demo.sh  scenarios.py
src/simplesingletable/: __init__.py  blob_storage.py  dynamodb_memory.py  local_blob_storage.py  local_storage_memory.py  models.py  transactions.py  utils.py
src/simplesingletable/extras/: __init__.py  audit.py  cache.py  form_data.py  habit_tracker.py  readonly_repository.py  readonly_versioned_repository.py  repository.py  singleton.py  versioned_repository.py
src/streamlit_app/: streamlit_app.py
src/streamlit_app/pages/: Form Data demo.py  Habit Tracker.py
tests/: conftest.py  docker-compose.yml  test_audit.py  test_audit_blob.py  test_audit_edge_cases.py  test_audit_separate_table.py  test_batch_and_cache.py  test_blob_cache.py  test_blob_copy.py  test_blob_empty_set_issue.py  test_blob_pydantic_list.py  test_blob_storage.py  test_blob_storage_bugfixes.py  test_blob_storage_integration.py  test_blob_storage_performance.py  test_filter_expressions.py  test_float_support.py  test_form_data.py  test_gsi_none_handling.py  test_local_storage.py  test_local_storage_sets.py  test_memory_versioning_methods.py  test_nested_pydantic_models.py  test_nonversioned_resource.py  test_pagination_filtering_performance.py  test_readonly_repository.py  test_refactoring_features.py  test_repository.py  test_simplesingletable.py  test_transactions.py  test_ttl.py  test_tuple_gsi_config.py  test_version_sorting_bug.py  test_versioned_repository.py
use_case_examples/: singleton_configs.py
